html: Added a div for modal background. css: Added style for the modal background (opacity and z-index). jaavscript: display and hide modal background together with the modal. Block body overflow to prevent scrolling while modal opened.

--- a/style.css
+++ b/style.css
@@ -121,6 +121,17 @@ nav a {
     margin-right: 1%;
 }
 
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: black;
+    opacity: 0.75;
+}
+
 .modal {
     position: fixed;
     left: 5%;
@@ -129,6 +140,7 @@ nav a {
     width: 90%;
     background-color: black;
     border: 5px solid firebrick;
+    z-index: 2;
 }
 
 .modal-content-left {
